qtermwidget-1.2.0 / 2022-11-05
===============================
 * Enabled Bidi rendering by default.
 * Made text DND follow the settings for newline trimming and multiline prompt.
 * Allow `QTermWidget` to be used as a Qt Plugin.

qtermwidget-1.1.0 / 2022-04-15
===============================
 * Handled the zero history size.
 * Removed an unused variable.
 * Corrected some code indentations.
 * Added API documentation and followed naming convention.
 * Return focus to terminal on closing search bar.
 * Moved to SIP 5.x wth PyQt.
 * Added contexts to some lambda connections.

qtermwidget-1.0.0 / 2021-11-04
===============================
 * Bumped minimum required Qt version to 5.15.
 * Fixed crash under (Plasma) Wayland on opening tab and splitting.
 * Use "empty()" to check for container emptiness.
 * Made some member functions const.
 * Quote drag-and-drop file names.
 * Backported CNL and CPL support from Konsole.
 * Use QRandomGenerator instead of qrand().
 * Silenced some compilation warnings.
 * Basic EditorConfig definition.

qtermwidget-0.17.0 / 2021-04-15
===============================
  * Drop support for KDE3 color scheme formats.
  * Some code cleanup and modernization.
  * Added a method to disable bracketed paste mode.
  * Added an example for PyQt5.
  * Improve "Undecodable sequence" warnings.
  * Properly implement the "Action after paste" feature.
  * Fix execution after paste when Ctrl is hold.
  * Workaround an issue with glibc 2.33 on old Docker engines.
  * Added modes for background image. How background images are drawn is changed and manual reconfiguration is needed. See docs/configuration.md for more details.

qtermwidget-0.16.1 / 2020-11-14
===============================
  * Bumped version to 0.16.1, for a point release of qterminal.

qtermwidget-0.16.0 / 2020-11-01
===============================

  * Use qAsConst.
  * Don't search application dir for keyboard and scheme data.